<resources>
    <string name="app_name">MAL</string>
    <string name="back_button">Back Button</string>
    <string name="anime_image">Anime Image</string>
    <string name="anime_title">Anime Title</string>
    <string name="unknown_anime_title">Unknown Anime Title</string>
    <string name="type_eps">%s (%s)</string>
    <string name="unknown_type">Unknown Type</string>
    <string name="unknown_eps">\?</string>
    <string name="unknown_season">Unknown Season</string>
    <string name="unknown_year">Unknown Year</string>
    <string name="season_year">%s %s</string>
    <string name="rank">Rank %d</string>
    <string name="unknown_rank">Unknown Rank</string>
    <string name="score">8.32</string>
    <string name="unknown_score">--</string>
    <string name="star_icon">Star Icon</string>
    <string name="error">Error</string>
    <string name="error_try_again">Error, Try Again</string>
    <string name="refresh">Refresh</string>
    <string name="score_uppercase">SCORE</string>
    <string name="rank_uppercase">RANK</string>
    <string name="popularity_uppercase">POPULARITY</string>
    <string name="_9">9</string>
    <string name="finished_airing">Finished Airing</string>
    <string name="source_s">Source: %s</string>
    <string name="rating_s">Rating: %s</string>
    <string name="genre_s">Genre: %s</string>
    <string name="synopsis_n_s">Synopsis\n%s</string>
    <string name="character_image">Character Image</string>
    <string name="voice_actor_image">Voice Actor Image</string>
    <string name="character_name">Character Name</string>
    <string name="main">Main</string>
    <string name="voice_actor_name">Voice Actor Name</string>
    <string name="title_favorite">Favorite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_button">Search Button</string>
</resources>