<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/very_small"
    app:cardCornerRadius="@dimen/very_small">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_anime"
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:contentDescription="@string/anime_image"
            android:scaleType="centerCrop"
            android:src="@drawable/mal_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title"
            style="@style/TitleTextStyle"
            android:layout_width="0dp"
            android:layout_marginStart="@dimen/very_small"
            android:layout_marginEnd="@dimen/very_small"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/anime_title"
            app:layout_constraintBottom_toTopOf="@+id/tv_type"
            app:layout_constraintEnd_toStartOf="@id/star"
            app:layout_constraintStart_toEndOf="@id/iv_anime"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_type"
            style="@style/BaseTextStyle"
            android:layout_width="0dp"
            android:layout_marginStart="@dimen/very_small"
            android:layout_marginEnd="@dimen/very_small"
            android:text="@string/type_eps"
            app:layout_constraintBottom_toTopOf="@+id/tv_season"
            app:layout_constraintEnd_toStartOf="@id/star"
            app:layout_constraintStart_toEndOf="@id/iv_anime"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_season"
            style="@style/BaseTextStyle"
            android:layout_width="0dp"
            android:layout_marginStart="@dimen/very_small"
            android:layout_marginEnd="@dimen/very_small"
            android:text="@string/season_year"
            app:layout_constraintBottom_toTopOf="@+id/tv_rank"
            app:layout_constraintEnd_toStartOf="@id/star"
            app:layout_constraintStart_toEndOf="@id/iv_anime"
            app:layout_constraintTop_toBottomOf="@+id/tv_type" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_rank"
            style="@style/BaseTextStyle"
            android:layout_width="0dp"
            android:layout_marginStart="@dimen/very_small"
            android:layout_marginEnd="@dimen/very_small"
            android:text="@string/unknown_rank"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/star"
            app:layout_constraintStart_toEndOf="@id/iv_anime"
            app:layout_constraintTop_toBottomOf="@+id/tv_season" />

        <ImageView
            android:id="@+id/star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_star_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_score"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/star_icon"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_score"
            style="@style/BaseTextStyle"
            android:layout_width="0dp"
            android:layout_marginEnd="@dimen/very_small"
            android:text="@string/unknown_score"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>