<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/refresh"
    tools:context=".detail.DetailAnimeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/very_small"
                android:layout_marginTop="@dimen/very_small"
                android:layout_marginEnd="@dimen/very_small"
                android:paddingBottom="@dimen/very_small">

                <ImageView
                    android:id="@+id/iv_anime"
                    android:layout_width="100dp"
                    android:layout_height="140dp"
                    android:contentDescription="@string/anime_image"
                    android:scaleType="centerCrop"
                    android:src="@drawable/mal_logo"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_title"
                    style="@style/TitleTextStyle"
                    android:layout_width="0dp"
                    android:layout_marginStart="@dimen/very_small"
                    android:layout_marginEnd="@dimen/very_small"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/anime_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/iv_anime"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/container1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/very_small"
                    app:layout_constraintEnd_toStartOf="@id/container2"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintStart_toStartOf="@id/tv_title"
                    app:layout_constraintTop_toBottomOf="@id/tv_title">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/score"
                        style="@style/BaseTextStyle"
                        android:layout_width="match_parent"
                        android:background="@color/primary"
                        android:padding="4dp"
                        android:text="@string/score_uppercase"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_score"
                        style="@style/BaseTextStyle"
                        android:text="@string/score"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/score" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_type"
                        style="@style/BaseTextStyle"
                        android:layout_marginTop="@dimen/small"
                        android:text="@string/unknown_type"
                        android:textAlignment="center"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_score" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/container2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/very_small"
                    android:layout_marginTop="@dimen/very_small"
                    android:layout_marginEnd="@dimen/very_small"
                    app:layout_constraintEnd_toStartOf="@+id/container3"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintStart_toEndOf="@id/container1"
                    app:layout_constraintTop_toBottomOf="@id/tv_title">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/rank"
                        style="@style/BaseTextStyle"
                        android:layout_width="match_parent"
                        android:background="@color/primary"
                        android:padding="4dp"
                        android:text="@string/rank_uppercase"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_rank"
                        style="@style/BaseTextStyle"
                        android:text="@string/_9"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/rank" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_season"
                        style="@style/BaseTextStyle"
                        android:layout_marginTop="@dimen/small"
                        android:text="@string/unknown_season"
                        android:textAlignment="center"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_rank" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/container3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/very_small"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintStart_toEndOf="@+id/container2"
                    app:layout_constraintTop_toBottomOf="@id/tv_title">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/popularity"
                        style="@style/BaseTextStyle"
                        android:layout_width="match_parent"
                        android:background="@color/primary"
                        android:padding="4dp"
                        android:text="@string/popularity_uppercase"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_popularity"
                        style="@style/BaseTextStyle"
                        android:text="@string/_9"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/popularity" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_status"
                        style="@style/BaseTextStyle"
                        android:layout_marginTop="@dimen/small"
                        android:text="@string/finished_airing"
                        android:textAlignment="center"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_popularity" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_source"
                    style="@style/BaseTextStyle"
                    android:layout_marginTop="@dimen/small"
                    android:text="@string/source_s"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_anime" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_rating"
                    style="@style/BaseTextStyle"
                    android:layout_marginTop="@dimen/very_small"
                    android:text="@string/rating_s"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_source" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_genre"
                    style="@style/BaseTextStyle"
                    android:layout_marginTop="@dimen/very_small"
                    android:text="@string/genre_s"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_rating" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_synopsis"
                    style="@style/BaseTextStyle"
                    android:layout_marginTop="@dimen/very_small"
                    android:text="@string/synopsis_n_s"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_genre" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_character"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:paddingBottom="50dp"
                    android:layout_marginTop="@dimen/normal"
                    app:layout_constraintTop_toBottomOf="@id/tv_synopsis"
                    tools:listitem="@layout/item_character" />

                <com.facebook.shimmer.ShimmerFrameLayout
                    android:id="@+id/shimmer_view_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_marginTop="@dimen/normal"
                    app:layout_constraintTop_toBottomOf="@id/tv_synopsis">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <include layout="@layout/item_character_placeholder" />
                        <include layout="@layout/item_character_placeholder" />
                        <include layout="@layout/item_character_placeholder" />
                        <include layout="@layout/item_character_placeholder" />
                        <include layout="@layout/item_character_placeholder" />
                        <include layout="@layout/item_character_placeholder" />

                    </LinearLayout>

                </com.facebook.shimmer.ShimmerFrameLayout>

                <ImageView
                    android:id="@+id/iv_error"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:visibility="gone"
                    android:contentDescription="@string/error"
                    android:src="@drawable/ic_baseline_error_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintVertical_bias="0.1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_synopsis" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_error"
                    style="@style/BaseTextStyle"
                    android:layout_marginTop="@dimen/very_small"
                    android:text="@string/error_try_again"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="@id/iv_error"
                    app:layout_constraintStart_toStartOf="@id/iv_error"
                    app:layout_constraintTop_toBottomOf="@id/iv_error" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_try_again"
                    android:text="@string/refresh"
                    style="@style/BaseButtonStyle"
                    android:visibility="gone"
                    android:layout_marginTop="@dimen/very_small"
                    app:layout_constraintTop_toBottomOf="@id/tv_error"
                    app:layout_constraintStart_toStartOf="@id/tv_error"
                    app:layout_constraintEnd_toEndOf="@id/tv_error"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
