<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".search.SearchAnimeFragment">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small"
        android:adjustViewBounds="true"
        android:contentDescription="@string/back_button"
        android:padding="@dimen/very_small"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:theme="@style/Widget.MaterialComponents.Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_search"
        style="@style/SearchFieldStyle"
        android:layout_marginStart="@dimen/very_small"
        android:layout_marginTop="@dimen/small"
        android:layout_marginEnd="@dimen/very_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_back"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_anime"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/very_small"
        android:layout_marginEnd="@dimen/very_small"
        android:clipToPadding="false"
        android:paddingTop="@dimen/normal"
        android:paddingBottom="50dp"
        app:layout_constraintTop_toBottomOf="@id/et_search"
        tools:listitem="@layout/item_anime" />

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_view_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/very_small"
        android:layout_marginEnd="@dimen/very_small"
        android:paddingTop="@dimen/normal"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/et_search">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/item_anime_placeholder" />

            <include layout="@layout/item_anime_placeholder" />

            <include layout="@layout/item_anime_placeholder" />

            <include layout="@layout/item_anime_placeholder" />

            <include layout="@layout/item_anime_placeholder" />

            <include layout="@layout/item_anime_placeholder" />

            <include layout="@layout/item_anime_placeholder" />

            <include layout="@layout/item_anime_placeholder" />

            <include layout="@layout/item_anime_placeholder" />

            <include layout="@layout/item_anime_placeholder" />

            <include layout="@layout/item_anime_placeholder" />

            <include layout="@layout/item_anime_placeholder" />

            <include layout="@layout/item_anime_placeholder" />

            <include layout="@layout/item_anime_placeholder" />
        </LinearLayout>

    </com.facebook.shimmer.ShimmerFrameLayout>

    <ImageView
        android:id="@+id/iv_error"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:visibility="gone"
        android:contentDescription="@string/error"
        android:src="@drawable/ic_baseline_error_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_search" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_error"
        style="@style/BaseTextStyle"
        android:layout_marginTop="@dimen/very_small"
        android:text="@string/error_try_again"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/iv_error"
        app:layout_constraintStart_toStartOf="@id/iv_error"
        app:layout_constraintTop_toBottomOf="@id/iv_error" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_try_again"
        android:text="@string/refresh"
        style="@style/BaseButtonStyle"
        android:visibility="gone"
        android:layout_marginTop="@dimen/very_small"
        app:layout_constraintTop_toBottomOf="@id/tv_error"
        app:layout_constraintStart_toStartOf="@id/tv_error"
        app:layout_constraintEnd_toEndOf="@id/tv_error"/>

</androidx.constraintlayout.widget.ConstraintLayout>